--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 website:
-  title: "Personal Page"
+  title: "Personal Page of Mojtaba Masoudinejad"
   navbar:
     left:
       - href: index.qmd
@@ -17,6 +17,6 @@ format:
       dark: darkly
     css: styles.css
     toc: true
-
+    page-layout: full
 editor: visual
 
