--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,6 +8,7 @@ website:
   site-url: "https://www.masoudinejad.xyz"
   repo-url: "https://github.com/masoudinejad/masoudinejad.github.io"
   navbar:
+    pinned: true
     left:
       - href: index.qmd
         text: Home
@@ -23,6 +24,10 @@ website:
       - text: "{{< iconify bi linkedin size=1.1em title='LinkedIn' >}}"
         href: https://www.linkedin.com/in/mojtaba-masoudinejad/
         rel: me
+  page-footer:
+    center: |
+      <span class="faux-block"> Mojtaba Masoudinejad -- 2024</span>
+
 format:
   html:
     theme: 
