use short web name

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 website:
-  title: "Personal Page of Mojtaba Masoudinejad"
+  title: "Mojtaba Masoudinejad"
   description: "Mojtaba Masoudinejad is a senior machine learning engineer at the Bosch center for Artificial Intelligence (BCAI)"
   site-url: "https://www.masoudinejad.xyz"
   repo-url: "https://github.com/masoudinejad/masoudinejad.github.io"
