--- a/_quarto.yml
+++ b/_quarto.yml
@@ -16,14 +16,16 @@ website:
       - href: publications.qmd
         text: Publications
     right:
-      - text: "{{< iconify bi envelope size=1.1em title='E-mail' >}}"
+      - text: "{{< iconify ic baseline-email size=1.1em title='E-mail' >}}"
         href: "mailto:masoudinejad@gmail.com"
+      - text: "{{< iconify simple-icons orcid size=1.1em title='orcid'>}}"
+        href: https://orcid.org/0000-0002-3627-9387
       - text: "{{< iconify bi github size=1.1em title='GitHub' >}}"
         href: https://github.com/masoudinejad
-        rel: me
+      - text: "{{< iconify academicons google-scholar-square size=1.1em title='scholar'>}}"
+        href: https://scholar.google.com/citations?user=nb5UK5sAAAAJ&hl=en
       - text: "{{< iconify bi linkedin size=1.1em title='LinkedIn' >}}"
         href: https://www.linkedin.com/in/mojtaba-masoudinejad/
-        rel: me
   page-footer:
     center: |
       <span class="faux-block"> Mojtaba Masoudinejad -- 2024</span>
