--- a/_quarto.yml
+++ b/_quarto.yml
@@ -33,8 +33,8 @@ website:
 format:
   html:
     theme: 
-      light: flatly
-      dark: darkly
+      light: [flatly, theme_light.scss]
+      dark: [darkly, theme_dark.scss]
     css: styles.css
     toc: true
     page-layout: full
